base/hello_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello
spec:
  rules:
  - host: hello.apps.ocp4.example.com
    http:
      paths:
      - backend:
          service:
            name: hello
            port:
              number: 8080
        path: /
        pathType: ImplementationSpecific
